# tilt-hydrometer-web

./: .env.example  .gitignore  Cargo.toml  Cross.toml  Makefile  README.md  agents.md  docker-compose.prod.yml  docker-compose.yml  init_progress.txt  justfile  prd-backend.json  prd.json  progress.md
.cargo/: config.toml
.windsurf/rules/: tech-stack.md
.windsurf/workflows/: ralph-batch.md
client/: Cargo.toml  tilt-client.service
client/src/: buffer.rs  main.rs  scanner.rs  simulator.rs  uploader.rs
server/: Cargo.toml  Dockerfile
server/migration/: Cargo.toml
server/migration/src/: lib.rs  m20260215_000001_create_hydrometers.rs  m20260215_000002_create_brews.rs  m20260215_000003_create_readings.rs  m20260219_012142_create_user_sessions.rs  m20260219_012410_create_api_keys.rs
server/src/: main.rs  oidc.rs
server/src/fairings/: mod.rs  rate_limit.rs  request_logger.rs  security_headers.rs  session_cleanup.rs
server/src/guards/: api_key.rs  auth_or_api_key.rs  current_user.rs  mod.rs
server/src/models/entities/: api_keys.rs  brews.rs  hydrometers.rs  mod.rs  prelude.rs  readings.rs  user_sessions.rs
server/src/routes/: api_keys.rs  auth.rs  brews.rs  hydrometers.rs  mod.rs  readings.rs
server/src/services/: api_keys.rs  brew_service.rs  hydrometer_service.rs  mod.rs  reading_service.rs  sessions.rs
shared/: Cargo.toml
shared/src/: lib.rs
web/: index.html  package-lock.json  package.json
web/src/: App.tsx  index.css  main.tsx
web/src/components/: theme-provider.tsx  theme-toggle.tsx
web/src/components/auth/: protected-route.tsx
web/src/components/brew/: brew-notes.tsx  delete-brew-dialog.tsx  edit-brew-dialog.tsx
web/src/components/dashboard/: recent-readings-chart.tsx
web/src/components/hydrometer/: delete-hydrometer-dialog.tsx  edit-hydrometer-dialog.tsx  register-hydrometer-dialog.tsx
web/src/components/layout/: app-shell.tsx  breadcrumbs.tsx  page-header.tsx
web/src/components/readings/: fermentation-stats.tsx  readings-chart.tsx  readings-table.tsx
web/src/components/ui/: color-dot.tsx
web/src/hooks/: use-brews.ts  use-hydrometers.ts  use-readings.ts
web/src/lib/: api.ts  auth.tsx  tilt-colors.ts  toast.ts
web/src/pages/: api-keys.tsx  brew-detail.tsx  brew-list.tsx  brew-new.tsx  dashboard.tsx  hydrometer-list.tsx  not-found.tsx
web/src/types/: index.ts
