[package]
name = "client"
version = "0.1.0"
edition = "2024"

[dependencies]
btleplug = "0.11.8"
chrono = "0.4.43"
clap = { version = "4.5.58", features = ["derive"] }
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
shared = { version = "0.1.0", path = "../shared" }
tokio = { version = "1.49.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
